--- a/config.env
+++ b/config.env
@@ -19,6 +19,7 @@ ENV=ANYTHING
 ERROR_LOGS=-100 #Id Group
 EVENT_LOGS=-100 #Id Group
 JOIN_LOGGER=-100 #Id Group
+MUST_JOIN=
 MONGO_DB_URI=
 NO_LOAD=rss
 OWNER_ID=1700405732
