--- a/app.json
+++ b/app.json
@@ -91,6 +91,11 @@
          "required": true,
          "value": "-100"
       },
+      "MUST_JOIN": {
+         "description": "Event logs channel to note down important bot level events, recommend to make this public. ex: '-100123456'",
+         "required": true,
+         "value": "-100"
+      },
       "JOIN_LOGGER": {
          "description": "A channel where bot will print who added it to what group, useful during debugging or spam handling.",
          "required": true,
